--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class='box'><a href='/trial/scrollbg01/'><img src='/trial/scrollbg01/thumb.jpg'>Scroll bg01</a></div>
 		<div class='box'><a href='/trial/scrollbg02/'><img src='/trial/scrollbg02/thumb.jpg'>Scroll bg02</a></div>
 		<div class='box'><a href='/trial/transform/'><img src='/trial/transform/thumb.jpg'>Transform</a></div>
-		<div class='box'><a href='/trial/blog01/'><img src='/trial/blog01/thumb.jpg'>Blog01</a></div>
+		<div class='box'><a href='/trial/blog01/'><img src='/trial/land01/thumb.jpg'>Land01</a></div>
 	</div>
 </div><!-- container -->
 </body>
